--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
 			<button id="sphere">SPHERE</button>
 			<button id="helix">HELIX</button>
 			<button id="grid">GRID</button>
+			<button id="pyramid">PYRAMID</button>//
 		</div>
 
 		<script>
@@ -240,7 +241,7 @@
 			var controls;
 
 			var objects = [];
-			var targets = { table: [], sphere: [], helix: [], grid: [] };
+			var targets = { table: [], sphere: [], helix: [], grid: [],pyramid:[] };
 
 			init();
 			animate();
