--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>three.js css3d - periodic table</title>
+		<title>three.js css3d - periodic table change by jn</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<style>
@@ -111,7 +111,7 @@
 			<button id="sphere">SPHERE</button>
 			<button id="helix">HELIX</button>
 			<button id="grid">GRID</button>
-			<button id="pyramid">PYRAMID</button>//
+			<button id="pyramid">PYRAMID</button>
 		</div>
 
 		<script>
@@ -241,7 +241,7 @@
 			var controls;
 
 			var objects = [];
-			var targets = { table: [], sphere: [], helix: [], grid: [],pyramid:[] };
+			var targets = { table: [], sphere: [], helix: [], grid: [], pyramid: [] };
 
 			init();
 			animate();
@@ -368,6 +368,40 @@
 
 				}
 
+				 
+
+				 // for ( var i = 0; i < objects.length; i ++ ) {
+
+					// var object = new THREE.Object3D();
+
+					// object.position.x = ( ( i % 5 ) * 400 ) - 800;
+					// object.position.y = ( - ( Math.floor( i / 5 ) % 5 ) * 400 ) + 800;
+					// object.position.z = ( Math.floor( i / 25 ) ) * 1000 - 2000;
+
+					// targets.pyramid.push( object );
+
+					// }
+				var vector = new THREE.Vector3();
+				var spherical = new THREE.Spherical();
+
+				for ( var i = 0, l = objects.length; i < l; i ++ ) {
+
+					var phi = Math.acos( -1 + ( 2 * i ) / l );
+					var theta = Math.sqrt( l * Math.PI ) * phi;
+
+					var object = new THREE.Object3D();
+
+					spherical.set( 800, phi, theta );
+
+					object.position.setFromSpherical( spherical );
+
+					vector.copy( object.position ).multiplyScalar( 2 );
+
+					object.lookAt( vector );
+
+					targets.pyramid.push( object );
+				}
+
 				//
 
 				renderer = new THREE.CSS3DRenderer();
@@ -408,6 +442,13 @@
 				button.addEventListener( 'click', function ( event ) {
 
 					transform( targets.grid, 2000 );
+
+				}, false );
+
+				var button = document.getElementById( 'pyramid' );
+				button.addEventListener( 'click', function ( event ) {
+
+					transform( targets.pyramid, 2000 );
 
 				}, false );
 
